--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,199 @@
-<center>
-<img src="new.png" width="100%"/>
-<br/>
-<img src="ceu_codecamp.jpg"/>
-</center>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Nathaniel Jay T. Esmaya - Portfolio</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #eef2f7;
+            color: #333;
+        }
+        header {
+            background-color: #2b3d51;
+            color: white;
+            padding: 40px 0;
+            text-align: center;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+        header h1 {
+            margin: 0;
+            font-size: 3rem;
+            font-weight: bold;
+        }
+        header p {
+            margin: 10px 0;
+            font-size: 1.2rem;
+            font-weight: 300;
+        }
+        header img {
+            border-radius: 50%;
+            width: 140px;
+            height: 140px;
+            object-fit: cover;
+            margin-bottom: 20px;
+        }
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 50px 20px;
+        }
+        .section {
+            padding: 40px 0;
+            background-color: white;
+            border-radius: 10px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+            margin-bottom: 30px;
+        }
+        .section h2 {
+            font-size: 2.5rem;
+            text-align: center;
+            margin-bottom: 30px;
+            color: #2b3d51;
+        }
+        .about p, .contact p {
+            font-size: 1.1rem;
+            line-height: 1.6;
+            text-align: center;
+            padding: 0 20px;
+        }
+        .projects ul, .skills ul {
+            list-style-type: none;
+            padding: 0 20px;
+        }
+        .projects ul li, .skills ul li {
+            background-color: #f9fafb;
+            padding: 25px;
+            border-radius: 10px;
+            box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
+            margin-bottom: 20px;
+        }
+        .projects ul li h3, .skills ul li h3 {
+            margin: 0;
+            font-size: 1.5rem;
+            color: #2b3d51;
+        }
+        .projects ul li p, .skills ul li p {
+            margin-top: 10px;
+            font-size: 1rem;
+            color: #555;
+        }
+        .contact ul {
+            text-align: center;
+            list-style-type: none;
+            padding: 0;
+        }
+        .contact ul li {
+            font-size: 1.1rem;
+            margin: 10px 0;
+        }
+        .contact ul li a {
+            color: #2b3d51;
+            text-decoration: none;
+            font-weight: 600;
+        }
+        .contact ul li a:hover {
+            text-decoration: underline;
+        }
+        footer {
+            background-color: #2b3d51;
+            color: white;
+            text-align: center;
+            padding: 20px;
+            font-size: 0.9rem;
+        }
+        @media (max-width: 768px) {
+            .projects ul, .skills ul {
+                padding: 0 10px;
+            }
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <img src="nathan.jpg" alt="Nathaniel Jay T. Esmaya">
+        <div>
+            <h1>Nathaniel Jay T. Esmaya</h1>
+            <p>Web Developer | Designer | Student</p>
+        </div>
+    </header>
+
+    <div class="container">
+        <section class="section about">
+            <h2>About Me</h2>
+            <p>
+                Hello! I'm Nathaniel Jay T. Esmaya, a passionate student with a focus on web development and design. I am currently building my skills in front-end development and learning how to create intuitive, user-friendly websites. I enjoy experimenting with different technologies and designs, and I’m always looking for new ways to improve my craft. With a keen interest in both functionality and aesthetics, I strive to create seamless and engaging user experiences.
+            </p>
+        </section>
+
+        <section class="section projects">
+            <h2>My Projects</h2>
+            <ul>
+                <li>
+                    <h3>Project 1: Personal Portfolio</h3>
+                    <p>Designed and developed my personal portfolio website to showcase my skills, projects, and achievements.</p>
+                </li>
+                <li>
+                    <h3>Project 2: E-Commerce Website</h3>
+                    <p>Developed a fully functional e-commerce platform with secure payment integration, product search, and user accounts.</p>
+                </li>
+                <li>
+                    <h3>Project 3: Blog Platform</h3>
+                    <p>Created a blogging platform with rich text editor, user authentication, and comment section.</p>
+                </li>
+            </ul>
+        </section>
+
+        <section class="section skills">
+            <h2>Skills</h2>
+            <ul>
+                <li>
+                    <h3>Python</h3>
+                    <p>Proficient in Python for building scripts, applications, and automation tools.</p>
+                </li>
+                <li>
+                    <h3>C#</h3>
+                    <p>Experienced with C# for developing desktop applications and working with .NET frameworks.</p>
+                </li>
+                <li>
+                    <h3>Java</h3>
+                    <p>Skilled in Java for developing cross-platform applications and working with object-oriented programming.</p>
+                </li>
+                <li>
+                    <h3>MySQL</h3>
+                    <p>Familiar with MySQL for database design, management, and query optimization.</p>
+                </li>
+                <li>
+                    <h3>XAMPP</h3>
+                    <p>Experienced with XAMPP for local development and testing of PHP and MySQL applications.</p>
+                </li>
+            </ul>
+        </section>
+
+        <section class="section about">
+            <h2>BSIT-2A - CEU Malolos</h2>
+            <p>
+                I am currently enrolled in the Bachelor of Science in Information Technology (BSIT) program, Section 2A, at CEU Malolos. This program is enhancing my skills in computer science, programming, and web development. I am excited to learn and grow in a variety of areas related to IT, and look forward to applying my knowledge to real-world projects and challenges.
+            </p>
+        </section>
+
+        <section class="section contact">
+            <h2>Contact</h2>
+            <p>If you would like to work together or have any questions, feel free to reach out to me:</p>
+            <ul>
+                <li>Email: <a href="esmaya2332367@mls.ceu.edu.ph">esmaya2332367@mls.ceu.edu.ph</a></li>
+                <li>LinkedIn: <a href="https://www.linkedin.com/in/jaynzle" target="_blank">linkedin.com/in/jaynzle</a></li>
+                <li>GitHub: <a href="https://github.com/jaynzle" target="_blank">github.com/jaynzle</a></li>
+            </ul>
+        </section>
+    </div>
+
+    <footer>
+        <p>&copy; 2025 Nathaniel Jay T. Esmaya | All rights reserved</p>
+    </footer>
+</body>
+</html>
